testCases/keywords/test4.uni
main(){
	busOne= 1111000b; //valid
	out = busOne; //error

}
neigh! 
